SigmaCodebackup3rdSep/objects/Tax__c.object
<CustomObject>
    <description>This is built for Magento Platform integration. Do not delete.</description>
    <fields>
        <fullName>Applies_To__c</fullName>
        <label>Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Federal Tax</fullName>
                </value>
                <value>
                    <fullName>State Tax</fullName>
                </value>
                <value>
                    <fullName>Product Tax</fullName>
                    <isActive>false</isActive>
                    <label>Product Tax</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Merchant Account should be Customer</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Taxs (Merchant Account)</relationshipLabel>
        <relationshipName>Taxs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Taxs</relationshipLabel>
        <relationshipName>Taxs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Taxes</relationshipLabel>
        <relationshipName>Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Andaman and Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Bihar</fullName>
                </value>
                <value>
                    <fullName>Chandigarh</fullName>
                </value>
                <value>
                    <fullName>Chhattisgarh</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Goa</fullName>
                </value>
                <value>
                    <fullName>Gujarat</fullName>
                </value>
                <value>
                    <fullName>Haryana</fullName>
                </value>
                <value>
                    <fullName>Himachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Jammu and Kashmir</fullName>
                </value>
                <value>
                    <fullName>Jharkhand</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Madhya Pradesh</fullName>
                </value>
                <value>
                    <fullName>Maharashtra</fullName>
                </value>
                <value>
                    <fullName>Manipur</fullName>
                </value>
                <value>
                    <fullName>Meghalaya</fullName>
                </value>
                <value>
                    <fullName>Mizoram</fullName>
                </value>
                <value>
                    <fullName>Nagaland</fullName>
                </value>
                <value>
                    <fullName>Orissa</fullName>
                </value>
                <value>
                    <fullName>Pondicherry</fullName>
                </value>
                <value>
                    <fullName>Punjab</fullName>
                </value>
                <value>
                    <fullName>Rajasthan</fullName>
                </value>
                <value>
                    <fullName>Sikkim</fullName>
                </value>
                <value>
                    <fullName>Tamil Nadu</fullName>
                </value>
                <value>
                    <fullName>Tripura</fullName>
                </value>
                <value>
                    <fullName>Uttarakhand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage__c</fullName>
        <label>Tax Percentage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                    <default>true</default>
                    <label>Percentage</label>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applies_To__c</columns>
        <columns>Name__c</columns>
        <columns>Tax_Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TX-{0000}</displayFormat>
        <label>Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Countryshouldnotblank</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Applies_To__c , &apos;State Tax&apos;)&amp;&amp; OR(ISBLANK(TEXT(Country__c)),ISBLANK(TEXT(State__c)))</errorConditionFormula>
        <errorMessage>Country,State Should not blank for State Tax</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Federal</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Applies_To__c , &apos;Federal Tax&apos;)&amp;&amp; OR(ISBLANK(TEXT(Country__c)))</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Country Should not blank for Federal Tax</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NameShouldnotblank</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Name__c)</errorConditionFormula>
        <errorDisplayField>Name__c</errorDisplayField>
        <errorMessage>Name Should not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TaxNegative</fullName>
        <active>true</active>
        <errorConditionFormula>Tax_Amount__c &lt;=0</errorConditionFormula>
        <errorDisplayField>Tax_Amount__c</errorDisplayField>
        <errorMessage>Tax Amount Should not be Negative or Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TypeShouldnotblank</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(Applies_To__c , &apos;Federal Tax&apos;),ISPICKVAL(Applies_To__c , &apos;State Tax&apos;))&amp;&amp; OR(ISBLANK(TEXT(Type__c)),ISBLANK(TEXT( Status__c)),ISBLANK(Tax_Amount__c))</errorConditionFormula>
        <errorMessage>Type,Status,TotalAMount Should not blank</errorMessage>
    </validationRules>
</CustomObject>